Added controllers and new folders
Added controllers for article, story and account. Added new folders with basic html.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -3,7 +3,13 @@
 }
 
 <div class="jumbotron">
-    <h1>Smoke Free</h1>
+    <h2>Quit smoking today <br/> Prevention is better than cure</h2>
+    <p> </p>
+
+    <div class="slideshow-container">
+
+
+    </div>
     
 </div>
 
@@ -11,20 +17,18 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Wonder how you can begin your journey to being smoke free? Start here today!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p class="btn btn-default">@Html.ActionLink("Sign Up", "SignUpMember", "Account")</p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Articles</h2>
+        <p>Read some of our articles written by professionals about what smoking can do to your health</p>
+        <p class="btn btn-default">@Html.ActionLink("Articles", "Articles", "Article")</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>About us</h2>
+        <p>Learn about our website and why we do what we do!</p>
+        <p class="btn btn-default">@Html.ActionLink("About Us", "About", "Home")</p>
     </div>
 </div>
