--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
@@ -16,14 +16,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Smoke Free", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Articles", "Articles", "Article")</li>
+                    <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                    <li>@Html.ActionLink("Sign In", "SignIn", "Account")</li>
+
                 </ul>
+                
+ 
             </div>
         </div>
     </div>
