--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpMember.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpMember.cshtml
@@ -1,18 +1,85 @@
 ﻿@{
-    ViewBag.Title = "SignUp";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "SignUpMember";
+    Layout = "~/Views/Shared/_SignUpLayout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    
+@model SmokeFreeApplication.Models.InterestedParty
+@using (Html.BeginForm("SignUpAsMember", "Account", FormMethod.Post))
+{
+    <div class="form-group">
+        <label>User Name</label>
+        <div class="form-control">
+            @Html.TextBoxFor(m => m.userName, new { placeholder="Username", required = "required" })
+        </div>
+        
+        
     </div>
-</body>
-</html>
+
+    <div class="form-group">
+        <label>Password</label>
+        <div class="form-control">
+            @Html.PasswordFor(m => m.password, new { placeholder = "Password", required = "required" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Name</label>
+        <div class="form-control">
+            @Html.TextBoxFor(m => m.name, new { placeholder = "Name", required = "required" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Email</label>
+        <div class="form-control">
+            @Html.TextBoxFor(m => m.email, new { type = "email", placeholder ="abc@gmail.com", required ="required" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Date Of Birth</label>
+        <div class="form-control">
+            @Html.TextBoxFor(m => m.dateOfBirth, new {@type = "date", required="required"})
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Gender</label>
+        <div class="form-control">
+
+            @Html.RadioButtonFor(m => m.gender, "Male", new { required = "required" })
+            Male
+
+            @Html.RadioButtonFor(m => m.gender, "Female", new { required = "required" })
+            Female
+
+            @Html.RadioButtonFor(m => m.gender, "Others", new { required = "required" })
+            Prefer not to say
+
+
+        </div>
+        
+    </div>
+
+    <div class="form-group">
+        <label>Are you a smoker?</label>
+        @Html.RadioButtonFor(m => m.smokerOrNot, 1, new { required = "required" })
+        Yes
+
+        @Html.RadioButtonFor(m => m.smokerOrNot, 0, new { required = "required" })
+        No
+
+     
+    </div>
+
+    <div class="form-group">
+        <label>Profile Picture</label>
+        <input type="file" name="profilePicture" id="fileUpload"/>
+    </div>
+
+
+
+    <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="Sign Up" />
+    </div>
+}
