--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
@@ -4,33 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Smoke Free", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Articles", "Articles", "Article")</li>
-                    <li>@Html.ActionLink("About Us", "About", "Home")</li>
-                    <li>@Html.ActionLink("Sign In", "SignIn", "Account")</li>
+    @if (Session["username"] == null)
+    {
+        @Html.Partial("_NotSignedIn");
+    }
+    else
+    {
+        @Html.Partial("_SignedIn");
+    }
 
-                </ul>
-                
- 
-            </div>
-        </div>
-    </div>
+
+
     <div class="container body-content">
         @RenderBody()
         <hr />
