--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/printTest.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/printTest.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SmokeFreeApplication.Models.DocEntry
 @{
-    ViewBag.Title = "Test";
+    ViewBag.Title = "Testtitle";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
