--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/Test.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/Test.cshtml
@@ -1,15 +1,16 @@
-﻿@model SmokeFreeApplication.Models.Test
+﻿@*remember the change the Test to Test2 when testing table 2*@
+@model SmokeFreeApplication.Models.Test
 @{
     ViewBag.Title = "Test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>This is a header</h2>
-<h2>Model name is @Model.Name</h2>
-@if (Model.ID == 1)
+<h2>Model name is @Model.name</h2>
+@if (Model.id == 1)
 {<h2>IF detect id is 1</h2>}
 else
-{ <h2>@Model.ID</h2>}
+{ <h2>@Model.id</h2>}
 
 
 <nav>
