--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/para.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/para.cshtml
@@ -5,10 +5,10 @@
 }
 
 <h2>This is a header</h2>
-<h2>Model name is @Model.Name</h2>
-@if (Model.ID == 1)
+<h2>Model name is @Model.name</h2>
+@if (Model.id == 1)
 { <h2>IF detect id is 1</h2>}
 else
-{ <h2>@Model.ID</h2>}
+{ <h2>@Model.id</h2>}
 
 
