Revert "Added a db to play around"
This reverts commit ad17059fab3c5dccaef6e68c44ae1b6374635098.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/printTest.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/printTest.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SmokeFreeApplication.Models.DocEntry
 @{
-    ViewBag.Title = "Testtitle";
+    ViewBag.Title = "Test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
