--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_NotSignedIn.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_NotSignedIn.cshtml
@@ -11,13 +11,10 @@
                 @Html.ActionLink("Home", "Index", "Home")
             </li>
             <li class="nav-item nav-link">
-                @Html.ActionLink("Articles", "Articles", "Article")
-            </li>
-            <li class="nav-item nav-link">
                 @Html.ActionLink("About Us", "About", "Home")
             </li>
             <li class="nav-item nav-link">
-                @Html.ActionLink("Sign In", "SignIn", "Account")
+                @Html.ActionLink("Sign In", "SignInMember", "Account")
             </li>
 
 
