--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_SignedIn.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_SignedIn.cshtml
@@ -19,21 +19,12 @@
                 <li class="nav-item nav-link">
                     @Html.ActionLink("About Us", "About", "Home")
                 </li>
-                <li class="nav-item nav-link">
-                    @if (Session["docOrMember"] == "doc")
-                    {
-                        @Html.ActionLink("Profile", "DrProfile", "Doctor")
-                    }
-                    else
-                    {
-                        @Html.ActionLink("Profile", "MemberProfile", "InterestedParty")
-                    }
-                </li>
-                <li class="nav-item nav-link">
-                    @Html.ActionLink("Logout", "Logout", "Account")
-                </li>
 
             </ul>
+
+            <div class="d-inline">
+                @Html.ActionLink("Logout", "Logout", "Account")
+            </div>
         </div>
     </nav>
 
