--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/MemberProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/InterestedParty/MemberProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "MemberProfile";
-    Layout = "~/Views/Account/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>MemberProfile</h2>
