--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignInDoctor.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignInDoctor.cshtml
@@ -8,6 +8,7 @@
 @model SmokeFreeApplication.Models.GeneralUser
 @using (Html.BeginForm("SignInAsDoctor", "Account", FormMethod.Post))
 {
+    <h3>Doctor Sign In</h3>
     <div class="form-group row">
         <div class="col-sm-12">
             <span class="badge badge-danger">@TempData["loginFailed"]</span>
@@ -17,7 +18,6 @@
         </div>
     </div>
    
-
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.userName)</label>
         <div class="col-sm-10">
