--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignInMember.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignInMember.cshtml
@@ -7,15 +7,13 @@
 @model SmokeFreeApplication.Models.GeneralUser
 @using (Html.BeginForm("SignInAsMember", "Account", FormMethod.Post))
 {
+    <h3>Member Sign In</h3>
     <div class="form-group-row">
         <div class="col-sm-12">
-
             <span class="badge badge-danger">@TempData["loginFailed"]</span>
-            
-
         </div>
     </div>
-   
+
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.userName)</label>
         <div class="col-sm-10">
