--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
@@ -1,7 +1,38 @@
-﻿@{
+﻿@model IEnumerable<SmokeFreeApplication.Models.Story>
+
+@{
     ViewBag.Title = "Stories";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<br />
+<h2>Stories</h2>
 
-@TempData["message"];
+<p>
+    @Html.ActionLink("Create New", "CreateStory")
+</p>
+@foreach (var item in Model)
+{
+    <div class="card" style="width: 70rem;">
+        <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID})" style="text-decoration: none;">
+            <div class="card-header">
+                <img src="../../images/blank_profile.png" style="width:5rem; height:5rem; float:left;">
+                <div style="height:5rem; padding-top:30px; padding-left:100px;">
+                    <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
+                </div>
+            </div>
+            <div class="card-body">
+                <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
+                <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+            </div>
+            <div class="card-footer">
+                <a href="#" class="card-link">Comment</a>
+                <a href="#" class="card-link">Share</a>
+            </div>
+        </a>
+    </div>
+    <br />
+
+}
+
 
